--- a/Stuff.html
+++ b/Stuff.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Random Stuff</title>
+</head>
+<body>
+<h1>Just a website about ideas of mine and whatnot</h1>
+</body>
+</html>
